Added validations to every string field. Note content has a maximum length of one million characters, email capped at 254 which is the standard, url can be 2000 characters also standard, password 100 characters. Also added limits to preferences.

--- a/frontend/core/src/main/webapp/static/app/entry/entryDetails.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryDetails.html
@@ -9,7 +9,7 @@
       <h2 class="group-heading row-form" editable-field-deactivate>forgot password?</h2>
       <div class="row-form">
         <input type="email" name="email" ng-model="user.username"
-        placeholder="enter email&#8230;" editable-field="getEditableFieldSticky()"
+        placeholder="enter email&#8230;" maxlength="254" editable-field="getEditableFieldSticky()"
         editable-field-register-callbacks="registerEntryForgotEmailInputCallbacks(focus, blur)" required />
       </div>
       <div class="group-error row-form">
