--- a/frontend/core/src/main/webapp/static/app/entry/reset.html
+++ b/frontend/core/src/main/webapp/static/app/entry/reset.html
@@ -4,7 +4,8 @@
       <section class="container-content">
         <h2 class="group-heading instruction row">reset password</h2>
         <div class="row-form">
-          <input type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password&#8230;" ng-keydown="typePassword()" required />
+          <input type="password" name="password" id="password" ng-model="user.password" ng-minlength="7"
+          ng-maxlength="100" placeholder="enter password&#8230;" ng-keydown="typePassword()" required />
         </div>
         <div class="group-error row">
           <div ng-if="resetForm.password.$touched" ng-messages="resetForm.password.$error">
