--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -150,7 +150,7 @@
             ng-model="note.trans.content" input-model-validator ng-trim="false" msd-elastic editable-field
             editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)"
             editable-field-focus="setNoteContentFocus(true)" editable-field-blur="setNoteContentFocus(false)"
-            placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
+            placeholder="enter content&#8230;" maxlength="1000000" autocapitalize="none" autocorrect="off">
           </textarea>
 
           <div ng-if="onboardingInProgress" ng-show="note.trans.content.length" class="row">
@@ -234,7 +234,7 @@
           <div class="row-vertically-centered with-textarea row-top-parent">
             <textarea ng-model="note.trans.link" input-model-validator ng-trim="false"
               ng-change="inputChanged()" msd-elastic
-              maxlength="128" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
+              maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
             </textarea>
           </div>
 
