--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -105,9 +105,11 @@
   <script src="static/app/base/swiperSlideDirective.js"></script>
   <script src="static/app/base/verticalResizeDirective.js"></script>
   <script src="static/app/base/verticalResizeDelayDirective.js"></script>
+
   <script src="static/app/user/UserController.js"></script>
   <script src="static/app/user/UserEditorController.js"></script>
   <script src="static/app/user/UserService.js"></script>
+  <script src="static/app/user/CalendarService.js"></script>
 
   <script src="static/app/tasks/TasksController.js"></script>
   <script src="static/app/tasks/TaskEditorController.js"></script>
