--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -1,11 +1,11 @@
 <form role="form" class="group-mixed with-checkbox with-textarea swiper-no-swiping"
   ng-submit="callAndExit(saveTask, newItem)" data-snap-ignore="true" editable-field-container
-  editable-field-container-clicked-elsewhere="clickedElsewhere({keepEmptyFieldActivated: onboardingInProgress})"
+  editable-field-container-clicked-elsewhere="clickedElsewhere({keepEmptyFieldActivatedFn: isOnboardingInProgress})"
   autocapitalize="none" autocorrect="off">
   <div class="group-mixed--left">
     <input type="checkbox" ng-model="newItem.trans.optimisticComplete" ng-model-options="{getterSetter: true}"
       swiper-click="toggleLeftCheckbox(toggleCompleteTask)" icon-checkbox="getListItemAddId()"
-      ng-disabled="!newItem.trans.title || onboardingInProgress">
+      ng-disabled="!newItem.trans.title || isOnboardingInProgress()">
   </div>
   <div class="group-mixed--middle">
     <textarea ng-model="newItem.trans.title" msd-elastic ng-keydown="textareaKeyDown($event)"
@@ -22,7 +22,7 @@
 </form>
 
 <!-- ONBOARDING -->
-<div ng-if="onboardingInProgress && !isOnboarded('focusTasks')" class="group-instruction-input">
+<div ng-if="isOnboardingInProgress()" class="group-instruction-input">
   <div ng-show="!newItem.trans.title || newItem.trans.title.length === 0" class="text-details row">
     e.g. call mom, email boss, buy milk
   </div>
