--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -1,5 +1,4 @@
-<div class="container-main" ng-controller="MainController"
-     ng-class="onboardingInProgress && 'onboarding-in-progress'">
+<div class="container-main" ng-controller="MainController">
   <div ng-include="urlBase + 'app/main/menu.html'" include-replace></div>
   <div ng-include="urlBase + 'app/main/editor.html'" include-replace></div>
   <div drawer-aisle class="container-drawer-aisle">
