--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -146,7 +146,8 @@
 
           <!-- CONTENT -->
           <textarea ng-if="drawerAisleInitialized" ng-hide="listPickerOpen || keywordsPickerOpen"
-            id="ignoreSnap" ng-class="(onboardingInProgress && !contentFocused) && 'input-separate'"
+            id="ignoreSnap"
+            ng-class="{'disable-full-height': isOnboarding('notes'), 'input-separate': !contentFocused}"
             ng-model="note.trans.content" input-model-validator ng-trim="false" msd-elastic editable-field
             editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)"
             editable-field-focus="setNoteContentFocus(true)" editable-field-blur="setNoteContentFocus(false)"
