--- a/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
@@ -11,5 +11,6 @@
       list-item ng-include="urlBase + 'app/lists/listListItem.html'"></div>
     <div list-prompt="lists" list-prompt-infos="listInfos" list-prompt-hide="[listItemAddActive]"></div>
   </section>
-  <footer class="container-content--after" list-footer="getFeatureMap('lists')"></footer>
+  <footer class="container-content--after" list-footer="getFeatureMap('lists')"
+  list-footer-subfeature="archived"></footer>
 </div>
