--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -45,7 +45,7 @@
       <div class="textgroup-ingress last row">add items by hitting the logo that's always in the top-right corner</div>
     </div>
   </section>
-  <footer ng-if="isOnboarding('inbox')" class="container-content--after group-btn">
+  <footer ng-if="isOnboarding('inbox')" class="container-content--after group-btn onboarding">
     <button type="submit" class="btn-action" ng-click="completeOnboarding('inbox')">
       <span class="text-btn">got it</span>
     </button>
